--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Thomas\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
-j2ee.server.home=C:/Program Files/Environnement/Tomcat/apache-tomcat-9.0.24
-j2ee.server.instance=tomcat90:home=C:\\Program Files\\Environnement\\Tomcat\\apache-tomcat-9.0.24
+deploy.ant.properties.file=C:\\Users\\Joke-\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/Joke-/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+j2ee.server.home=G:/Java/Apache Tomcat 8.0.27
+j2ee.server.instance=tomcat80:home=G:\\Java\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Thomas\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Joke-\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
